--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@
     --fb-color: #3b5998;
 }
 
+.prof {
+    /* background-color: #000000; */
+    margin: auto;
+    margin-top: 20px;
+    align-items: center;
+    text-align: center;
+}
+
+.prof img {
+    margin-bottom: 10px;
+}
+
 .tombol {
     text-align: center;
     border-radius: 10px;
